# rest-api-benchmarks

./: README.md  docker-compose.yml  justfile
dart-alfred-drift/: .gitignore  Dockerfile  README.md  pubspec.yaml
elixir_phoenix_ecto/: .gitignore  Dockerfile  README.md  justfile  mix.exs
elixir_phoenix_ecto/config/: config.exs  dev.exs  runtime.exs  test.exs
elixir_phoenix_ecto/lib/: elixir_phoenix_ecto_web.ex
elixir_phoenix_ecto/lib/elixir_phoenix_ecto/: application.ex  repo.ex  users.ex
elixir_phoenix_ecto/lib/elixir_phoenix_ecto_web/: endpoint.ex  router.ex  telemetry.ex
go-fiber-bun/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  justfile
go-fiber-bun/cmd/: main.go
go-fiber-bun/internal/database/: database.go
go-fiber-bun/internal/database/models/: user_contacts.go  (+2 more)
go-fiber-bun/internal/endpoints/: endpoints.go  users.go
migrations/: 000001_create_users_table.up.sql  000002_create_user_contacts.up.sql  000003_create_user_notes.up.sql
nodejs-nestjs-sequelize/: Dockerfile  README.md  biome.json  docker-compose.yaml  justfile  package-lock.json  package.json
nodejs-nestjs-sequelize/src/: main.ts
nodejs-nestjs-sequelize/src/modules/: app.module.ts
rust-axum-prisma/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
rust-axum-prisma/prisma/: schema.prisma
rust-axum-prisma/prisma-cli/: Cargo.toml
rust-axum-prisma/src/: main.rs
rust-axum-prisma/src/database/: mod.rs  prisma.rs
rust-axum-prisma/src/endpoints/: mod.rs  users.rs
rust-axum-prisma/src/services/: users.rs
seeder/: go.mod  main.go
(+984 files in other folders)
