[package]
name = "rust-axum-prisma"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli"
]

[dependencies]
axum = "0.6.20"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tower-http = { version = "0.4", features = ["trace"] }
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
serde = "1.0.192"
serde_json = "1.0.108"
axum-extra = { version = "0.8", features = ["query"] }
